# Companis

./: .gitignore  .semgrepconfig.yml  CLAUDE.md  MOBILE_FIRST_REVIEW_PLAN.md  README.md  docker-compose.test.yml  docker-compose.yml
.github/workflows/: test.yml
backend/: .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6242b07aad17_initial_schema_with_indexes_and_new_.py
backend/app/: __main__.py  config.py  database.py  main.py
backend/app/api/: ai.py  auth.py  collections.py  cooking_history.py  deps.py  household.py  ingredients.py  meal_plan.py  recipes.py  shopping.py  users.py
backend/app/models/: __init__.py  cooking_history.py  household.py  ingredient.py  meal_plan.py  recipe.py  shopping.py  user.py
backend/app/schemas/: ai.py  collection.py  cooking_history.py  household.py  ingredient.py  legal.py  meal_plan.py  recipe.py  shopping.py  user.py
backend/app/services/: auth.py  barcode.py  ingredient.py  mealdb.py  recipe.py
backend/app/services/ai/: __init__.py  anthropic.py  base.py  claude_local.py  ollama.py  openai_service.py
backend/app/utils/: security.py
backend/scripts/: import_mealdb.py
backend/tests/: conftest.py  test_auth.py
backend/tests/fixtures/: seed_data.py
backend/tests/integration/: conftest.py  test_ai_endpoints_integration.py  test_auth_integration.py  test_household_integration.py  test_ingredients_integration.py  test_recipes_integration.py  test_shopping_integration.py  test_users_integration.py
backend/tests/ollama_integration/: conftest.py  test_ollama_ai.py  test_ollama_setup.py
backend/tests/unit/: test_ai_factory.py  test_ai_prompts.py  test_anthropic_service.py  test_claude_local_service.py  test_config.py  test_legal.py  test_main_entry.py  test_ollama_service.py  test_openai_service.py  test_schemas.py  test_schemas_ai.py  test_security.py  test_service_auth.py  test_service_barcode.py  test_service_ingredient.py  test_service_mealdb.py  test_service_recipe.py
frontend/: .env.example  CLAUDE.md  capacitor.config.ts  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  wdio.android.conf.ts  wdio.ios.conf.ts
frontend/e2e/: accessibility.spec.ts  helpers.ts  (+9 more)
(+60 files in other folders)
